--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -139,11 +139,10 @@
         <div id="main_detail__comment__contents__txt__{{comment.id}}">
           <span>{{comment.content}}</span>
         </div>
-        <div id="main_detail__comment__contents__reply">
-          {% comment %} 답글 테스트로 여기 위치
+        <div class="main_detail__comment__contents__reply">
           {% for recomment in comment.comment_set.all %}
-          <div>{{recomment.content}}</div>
-          {% endfor%} {% endcomment %}
+          <div>@{{recomment.user.nickname}}{{recomment.content}}</div>
+          {% endfor%}
           <div id="main_detail_comment_contents_reply_form__{{comment.id}}"></div>
           
         </div>
