--- a/posts/templates/posts/main_write.html
+++ b/posts/templates/posts/main_write.html
@@ -15,30 +15,34 @@
         <div class="main_write__top__select_row">
           <div class="main_write__dropdown__select_left">
             <!--<div class="main_write__top__select_title">
-              <h3>진행방식</h3>
-            </div>
-            <div class="main_write__top__box">
-              <div class="main_write__dropdown">
-                <div class="main_write__select">
-                  <div
-                    class="main_write__selected"
-                    contenteditable="true"
-                    placeholder="온라인/오프라인/혼합"
-                  ></div>
-                  <div class="main_write__caret"></div>
-                </div>
-                <div class="main_write__menu">
-                  <li class="main_write__active">온라인</li>
-                  <li>오프라인</li>
-                  <li>혼합</li>
-                </div>
+            <h3>진행방식</h3>
+          </div>
+          <div class="main_write__top__box">
+            <div class="main_write__dropdown">
+              <div class="main_write__select">
+                <div
+                  class="main_write__selected"
+                  contenteditable="true"
+                  placeholder="온라인/오프라인/혼합"
+                ></div>
+                <div class="main_write__caret"></div>
               </div>
-            </div>-->
+              <div class="main_write__menu">
+                <li class="main_write__active">온라인</li>
+                <li>오프라인</li>
+                <li>혼합</li>
+              </div>
+            </div>
+          </div>-->
             <!--드롭다운 아직 연결 안돼서 일단 select box로-->
             <div>
               진행방식 :
+              <label for="{{form.contact.id_for_label}}"></label>
               <select name="contact">
-                <option selected value="default">----------</option>
+                <option value selected="default">----------</option>
+                <option key="Off">오프라인</option>
+                <option key="On">온라인</option>
+                <option key="Mix">혼합</option>
                 {% for key, value in contacts %}
                 <option value="{{ key }}">{{ value }}</option>
                 {% endfor %}
@@ -48,24 +52,24 @@
           <!--드롭다운 아직 연결 안돼서 일단 select box로-->
           <div class="main_write__dropdown__select_right">
             <!--<div class="main_write__top__select_title">
-              <h3>모임형태</h3>
-            </div>
-            <div class="main_write__top__box">
-              <div class="main_write__dropdown">
-                <div class="main_write__select">
-                  <div
-                    class="main_write__selected"
-                    contenteditable="true"
-                    placeholder="정기/번개"
-                  ></div>
-                  <div class="main_write__caret"></div>
-                </div>
-                <ul class="main_write__menu">
-                  <li class="main_write__active">정기</li>
-                  <li>번개</li>
-                </ul>
+            <h3>모임형태</h3>
+          </div>
+          <div class="main_write__top__box">
+            <div class="main_write__dropdown">
+              <div class="main_write__select">
+                <div
+                  class="main_write__selected"
+                  contenteditable="true"
+                  placeholder="정기/번개"
+                ></div>
+                <div class="main_write__caret"></div>
               </div>
-            </div>-->
+              <ul class="main_write__menu">
+                <li class="main_write__active">정기</li>
+                <li>번개</li>
+              </ul>
+            </div>
+          </div>-->
             <!--드롭다운 아직 연결 안돼서 일단 select box로-->
             <div>
               <div for="{{ form.duration.id_for_label }}">기간</div>
@@ -76,57 +80,29 @@
         </div>
         <div class="main_write__top__select_row">
           <div class="main_write__top__select_left">
-            <div class="main_write__top__select_title">
-              <h3>모집인원</h3>
-            </div>
-            <div class="main_write__top__box">
-              <input
-                type="number"
-                class="main_write__top__box_text"
-                name="number"
-                placeholder="직접 입력"
-              />
+            <div class="main_write__top__box_text">
+              <div for="{{ form.number.id_for_label }}">모집 인원</div>
+              {{form.number}}
             </div>
           </div>
           <div class="main_write__top__select_right">
-            <div class="main_write__top__select_title">
-              <h3>지역</h3>
-            </div>
-            <div class="main_write__top__box">
-              <input
-                type="text"
-                class="main_write__top__box_text"
-                name="location"
-                placeholder="직접 입력"
-              />
+            <div class="main_write__top__box_text">
+              <div for="{{ form.location.id_for_label }}">지역</div>
+              {{form.location}}
             </div>
           </div>
         </div>
         <div class="main_write__top__select_row">
           <div class="main_write__top__select_left">
-            <div class="main_write__top__select_title">
-              <h3>모집링크</h3>
-            </div>
-            <div class="main_write__top__box">
-              <input
-                type="text"
-                class="main_write__top__box_text"
-                name="apply_link"
-                placeholder="구글폼 링크를 입력해주세요"
-              />
+            <div class="main_write__top__box_text">
+              <div for="{{ form.apply_link.id_for_label }}">모집 링크</div>
+              {{form.apply_link}}
             </div>
           </div>
           <div class="main_write__top__select_right">
-            <div class="main_write__top__select_title">
-              <h3>개발언어(선택)</h3>
-            </div>
-            <div class="main_write__top__box">
-              <input
-                type="text"
-                class="main_write__top__box_text"
-                name="tag"
-                placeholder="직접 입력"
-              />
+            <div class="main_write__top__box_text">
+              <div for="{{ form.tag.id_for_label }}">개발 언어</div>
+              {{form.tag}}
             </div>
           </div>
         </div>
@@ -154,8 +130,8 @@
         <h2>글 제목과 내용을 작성해주세요</h2>
       </div>
       <div class="main_write__tag_write__main">
-        <div >
-          <input for="{{ form.title.id_for_label }}">제목</input>
+        <div>
+          <div for="{{ form.title.id_for_label }}">제목</div>
           {{ form.title }}
         </div>
         <div id="main_write__content__contents">
@@ -173,7 +149,9 @@
           id="main_write__content__btn_register"
           type="submit"
           value="등록하기"
+          onclick="return confirm('정말 삭제하시겠습니까?')"
         />
+        <!--여기 포스트가 잘 만들어졌다는 걸 if문으로 처리하려면 뭘 넣어야 할까-->
       </div>
     </div>
   </form>
