[fix] 날짜 오류 해결

--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -25,7 +25,7 @@
             <span>{{post.user.nickname}}</span>
           </div>
           <div id="main_detail__top__time">
-            <span>{{post.published_at}}</span>
+            <span>{{post.published_at|date:"Y. m. d" }}</span>
           </div>
         </div>
       </div>
