--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -153,6 +153,7 @@
         <button onclick="changeForm2({{comment.id}});">답글</button>
         <br />
       </div>
+      
       {% endfor %}
     </div>
   </div>
@@ -200,6 +201,8 @@
     </form>
     <div id="main_detail__review__contents">
     {% for review in reviews %}
+    {% if review.user == request.user %}
+    <div id="main_detail__review__contents_mine">
       <div id="main_detail__review__each__contents__{{review.id}}">
         <div class="main_detail__review__contents_top">
           <div class="review__contents_box__user_info">
@@ -245,7 +248,58 @@
             {{review.content}}
           </div>
         </div>
+      </div>
     </div>
+    {% else %}
+    <div id="main_detail__review__contents_others">
+      <div id="main_detail__review__each__contents__{{review.id}}">
+        <div class="main_detail__review__contents_top">
+          <div class="review__contents_box__user_info">
+            <div class="review__contents_box__profile">
+              <div class="review__contents_box__profile_img">
+                <i class="fa-solid fa-circle-user fa-3x"></i>
+                <img src="{{review.user.profile_img}}" alt="profile_img"></img>
+              </div>
+              <div class="review__contents_box__info">
+                <div class="main_detail__contents__profile_name">
+                  <span>{{review.user.nickname}}</span>
+                </div>
+                <div class="main_detail__contents__profile_time">
+                  <span>{{review.write_at}}</span>
+                </div>
+              </div>
+            </div>
+            {% if review.user == post.user %}
+            <div class="review__contents_box__auth">
+              <div id="review__contents_box__auth_host">주최자</div>
+            </div>
+            {% else %}
+            <div class="review__contents_box__auth">
+              <div id="review__contents_box__auth_guest">참여자</div>
+            </div>
+            {%endif%}
+          </div>
+          <div class="main_detail__review__contents_revise">
+            <img src="/static/img/dots.png" alt="" />
+            {% if review.user == request.user %}
+            <button onclick="changeForm3({{review.id}}, '{{review.content}}');">수정</button>
+            <button onclick="onClickdelete2({{review.id}})">삭제</button>
+            {%endif%}
+          </div>
+        </div>
+        <div class="main_detail__review__contents_content__{{review.id}}">
+          {% if review.image %}
+          <img src="{{review.image.url}}"/>
+          {% else %}
+          <p>no image</p>
+          {% endif %}
+          <div class="main_detail__review__contents_text">
+            {{review.content}}
+          </div>
+        </div>
+      </div>
+    </div>
+    {% endif %}
     {% endfor %}
     </div>
     <div>
