[feat] profile_view 페이지 구현

--- a/place/templates/place/write.html
+++ b/place/templates/place/write.html
@@ -26,7 +26,7 @@
     <div class="content-write__item">
       <div for="id_location">위치</div>
       <div class="content-write__item_location">
-        <input type="text" name="location" id="sample5_address" placeholder="주소">
+        <input type="text" name="location" id="sample5_address" placeholder="주소를 입력해주세요">
         <input type="button" onclick="sample5_execDaumPostcode()" value="주소 검색"><br>
       </div>
       <div><input type="text" name="location_detail" id="sample5_address" placeholder="상세 정보를 입력해주세요 (선택)"></div>
