--- a/place/templates/place/detail.html
+++ b/place/templates/place/detail.html
@@ -1,4 +1,5 @@
 {% extends 'place/base.html' %}
+{% load static %}
 {% block content %}
 <div class="content">
   <div class="content-top">
@@ -124,8 +125,11 @@
         <div id="main_detail__comment__each__contents__{{comment.id}}">
           <div id="main_detail__comment__contents__profile">
             <div id="main_detail__comment__contents__img">
-              <i class="fa-solid fa-circle-user fa-2x"></i>
-              <img src="{{review.user.profile_img}}" alt="profile_img"></img>
+              {% if comment.user.profile_img %}
+              <img src="{{comment.user.profile_img.url}}" width="45px" alt="profile_img"></img>
+              {% else %}
+              <img src="{% static "img/moco_symbol.png" %}" width="45px" alt="profile_img"></img>
+              {% endif %}
             </div>
             <div id="main_detail__comments__contents__info">
               <div id="main_detail__comments__contents__name">
