[feat] profile_veiw 페이지 CSS 작업

--- a/users/templates/users/profile_view.html
+++ b/users/templates/users/profile_view.html
@@ -3,15 +3,26 @@
 <div class="content">
   <div class="profile-top">
     <div class="profile-top__top">
-      {% if user.profile_img %}
-      <img src="{{user.profile_img.url}}" width="200px" alt="profile_img"></img>
-      {% else %}
-      <img src="{% static "img/moco_symbol.png" %}" width="200px" alt="profile_img"></img>
-      {% endif %}
-      {% if edit_access %}
-      <a href="{% url 'users:profile_edit' user.id %}">프로필수정</a>
-      {% endif %}
-      <h1>{{user.nickname}}</h1>
+      <div class="profile-top__left">
+        {% if user.profile_img %}
+        <img src="{{user.profile_img.url}}" alt="profile_img"></img>
+        {% else %}
+        <img src="{% static "img/moco_symbol.png" %}" alt="profile_img"></img>
+        {% endif %}
+      </div>
+      <div class="profile-top__right">
+        <div class="profile-top__edit">
+          <div>
+            <h1>{{user.nickname}}</h1>
+          </div>
+          <div>
+            {% if edit_access %}
+            <a href="{% url 'users:profile_edit' user.id %}">프로필수정</a>
+            {% endif %}
+          </div>
+        </div>
+        <div class="profile-top__level"><p>Lv.7(임시)</p></div>
+      </div>
     </div>
     <div class="profile-top__bottom">
       <div class="profile-top__info">
@@ -21,10 +32,10 @@
           <div><span>직업</span><span>{{user.job}}</span></div>
           <div><span>성별</span><span>{{user.gender}}</span></div>
         </div>
-        <div class="profile-top__desc">
-          <h2>소개</h2>
-          <p>{{user.desc}}</p>
-        </div>
+      </div>
+      <div class="profile-top__desc">
+        <h2>소개</h2>
+        <p>{{user.desc}}</p>
       </div>
     </div>
   </div>
@@ -32,87 +43,135 @@
   <div class="profile-bottom">
     {% if edit_access %}
     <div class="profile-bottom__list">
-      <h2>좋아요</h2>
-      <!--좋아요 누른 모집글-->
-      {% for like_post in user.like_posts.all %}
-      <div class="profile-bottom__post">
-        <h2>{{like_post.title}}</h2>
-        <p>{{like_post.content}}</p>
-        <div>
-          <span><i class="fa-solid fa-eye"></i></i><span>{{like_post.views}}</span></span>
-          <span><i class="fa-regular fa-heart fa-lg"></i><span>{{like_post.likes}}</span></span>
-          <span><i class="fa-solid fa-comment-dots"></i>{{like_post.comment_set.count}}</span>
+      <h2>❤️ 좋아요</h2>
+      <div class="profile-bottom__list_1">
+        <!--좋아요 누른 모집글-->
+        {% for like_post in user.like_posts.all %}
+        <div class="profile-bottom__post">
+        <a class="profile-bottom__item" href="{% url 'posts:detail' like_post.id %}">
+            {% if like_post.activation == True %}
+            <span class="activation_ing">모집중</span>
+            {% else %}
+            <span class="activation_over">모집완료</span>
+            {% endif %}
+            <p>{{like_post.title}}</p>
+            <div class="profile-bottom__post__content">
+              <p>
+                {{like_post.content|truncatechars:50}}
+              </p></div>
+            <div class="profile-bottom__post__icon">
+              <span><i class="fa-solid fa-eye"></i></i><span>{{like_post.views}}</span></span>
+              <span><i class="fa-regular fa-heart fa-lg"></i><span>{{like_post.likes}}</span></span>
+              <span><i class="fa-solid fa-comment-dots"></i>{{like_post.comment_set.count}}</span>
+            </div>
+          </a>
         </div>
-      </div>
-      {% endfor %}
-      <!--좋아요 누른 플레이스-->
-      {% for place, image in pairs_like %}
-      <div class="profile-bottom__place">
-        <a class="content-box__itme" href="{% url 'place:detail' place.id %}" >
-          {% if image %} <!--게시물-->
-          <div class="content-box__img">
-            <img src="{{image.image.url}}"><br>
-          </div>
-          {% endif %}
-          <h2>{{place.name}}</h2>
-          <div><i class="fa-solid fa-location-dot"></i><span>{{place.location}}</span></div>
-          <div>{{place.rating}}</div>
-        </a>
-      </div>
-      {% endfor %}
+        {% endfor %}
+        <!--좋아요 누른 플레이스-->
+        {% for place, image in pairs_like %}
+        <div class="profile-bottom__place">
+          <a class="profile-bottom__item" href="{% url 'place:detail' place.id %}" >
+            {% if image %} <!--게시물-->
+            <div class="profile-bottom__place__img">
+              <img src="{{image.image.url}}"><br>
+            </div>
+            {% endif %}
+            <div class="profile-bottom__place__info">
+              <p>{{place.name}}</p>
+              <div class="profile-bottom__place__location"><i class="fa-solid fa-location-dot"></i><span>{{place.location}}</span></div>
+              <div>{{place.rating}}</div>
+            </div>
+          </a>
+        </div>
+        {% endfor %}
+    </div>
     </div>
     {% endif %}
 
     <!--작성한 모각코 모집글-->
     <div class="profile-bottom__list">
-      <h2>작성한 모각코 모집글</h2>
-      {% for post in user.post_set.all %}
-      <div class="profile-bottom__post">
-        <h2>{{post.title}}</h2>
-        <p>{{post.content}}</p>
-        <div>
-          <span><i class="fa-solid fa-eye"></i></i><span>{{post.views}}</span></span>
-          <span><i class="fa-regular fa-heart fa-lg"></i><span>{{post.likes}}</span></span>
-          <span><i class="fa-solid fa-comment-dots"></i>{{post.comment_set.count}}</span>
+      <h2>💻 작성한 모각코 모집글</h2>
+      <div class="profile-bottom__list_2">
+        {% for post in user.post_set.all %}
+        <div class="profile-bottom__post">
+        <a class="profile-bottom__item" href="{% url 'posts:detail' post.id %}">
+            {% if post.activation == True %}
+            <span class="activation_ing">모집중</span>
+            {% else %}
+            <span class="activation_over">모집완료</span>
+            {% endif %}
+            <p>{{post.title}}</p>
+            <div class="profile-bottom__post__content">
+              <p>
+                {{post.content|truncatechars:50}}
+              </p></div>
+            <div class="profile-bottom__post__icon">
+              <span><i class="fa-solid fa-eye"></i></i><span>{{post.views}}</span></span>
+              <span><i class="fa-regular fa-heart fa-lg"></i><span>{{post.likes}}</span></span>
+              <span><i class="fa-solid fa-comment-dots"></i>{{post.comment_set.count}}</span>
+            </div>
+          </a>
         </div>
+        {% endfor %}
       </div>
-      {% endfor %}
     </div>
 
     <!--작성한 모각코 후기-->
     <div class="profile-bottom__list">
-      <h2>작성한 모각코 후기</h2>
-      {% for review in user.review_set.all %}
-      <div class="profile-bottom__review">
-        {% if review.user == post.user %}
-        <div class="review__contents_box__auth">
-          <div id="review__contents_box__auth_host">주최자</div>
-        </div>
-        {% else %}
-        <div class="review__contents_box__auth">
-          <div id="review__contents_box__auth_guest">참여자</div>
-        </div>
-        {%endif%}
-        <h2>{{review.post.title}}</h2>
-        <div class="profile-bottom__review__bottom">
-          {% if review.image %}
-          <img src="{{review.image.url}}" width="300px"/>
+      <h2>✏️ 작성한 모각코 후기</h2>
+      <div class="profile-bottom__list_3">
+        {% for review in user.review_set.all %}
+        <div class="profile-bottom__review">
+        <a class="profile-bottom__item" href="{% url 'posts:detail' review.post.id %}">
+          {% if review.user == review.post.user %}
+          <span class="auth_host">주최자</span>
           {% else %}
-          <p>no image</p>
+          <span class="auth_guest">참여자</span>
           {% endif %}
-          <p>{{review.post.content}}</p>
+          <p class="profile-bottom__review__title">{{review.post.title}}</p>
+          <div class="profile-bottom__review__bottom">
+            {% if review.image %}
+            <img src="{{review.image.url}}" />
+            {% else %}
+            <p>no image</p>
+            {% endif %}
+            <p style="line-height: 1.5rem;">{{review.post.content|truncatechars:90}}</p>
+          </div>
+          </a>
         </div>
+        {% endfor %}
       </div>
-      {% endfor %}
     </div>
 
     <!--작성한 플레이스 후기-->
     <div class="profile-bottom__list">
-      <h2>플레이스 후기</h2>
+      <h2>📍 플레이스 후기</h2>
+      <div class="profile-bottom__list_4">
+        {% for place, image in pairs_my %}
+        <div class="profile-bottom__place">
+          <a class="profile-bottom__item" href="{% url 'place:detail' place.id %}" >
+            {% if image %} <!--게시물-->
+            <div class="profile-bottom__place__img">
+              <img src="{{image.image.url}}"><br>
+            </div>
+            {% endif %}
+            <div class="profile-bottom__place__info">
+              <p>{{place.name}}</p>
+              <div class="profile-bottom__place__location"><i class="fa-solid fa-location-dot"></i><span>{{place.location}}</span></div>
+              <div>{{place.rating}}</div>
+            </div>
+          </a>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+
+    <!--     
+      <h2>📍 플레이스 후기</h2>
       {% for place, image in pairs_my %}
       <div class="profile-bottom__place">
         <a class="content-box__itme" href="{% url 'place:detail' place.id %}" >
-          {% if image %} <!--게시물-->
+          {% if image %}
           <div class="content-box__img">
             <img src="{{image.image.url}}"><br>
           </div>
@@ -123,7 +182,7 @@
         </a>
       </div>
       {% endfor %}
-    </div>
+    </div> -->
   </div>
 </div>
 {% endblock %}
