--- a/place/templates/place/detail.html
+++ b/place/templates/place/detail.html
@@ -14,7 +14,7 @@
     <div class="content-right">
             <div id="main_detail__top__like">
               <button id="{{place.id}}" onclick="place_like(this.id)">
-                좋아요
+                <i id="blank" class="fa-regular fa-heart"></i>
                 <span id="like_count">{{place.likes}}</span>
             </button>
             </div>
@@ -246,6 +246,10 @@ function place_like(id) {
         dataType: "json",
         success: function (response) { // ajax 통신이 정상적으로 완료되었을 때
             $('#like_count').html(response.like_count) //id가 like_count의 내용을 전송받은 좋아요 수로 바꾼다
+            if ($('#blank').hasClass("fa-regular fa-heart"))
+              $('#blank').removeClass("fa-regular fa-heart").addClass("fa-solid fa-heart");
+            else
+              $('#blank').removeClass("fa-solid fa-heart").addClass("fa-regular fa-heart");
             if (response.error) {
               window.location.replace("http://127.0.0.1:8000/account/login"); // 배포용 서버로 변경
             } 
